src/peppermint/src/main/java/gen/cParser.java
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class cParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		Ident=53, COMMENT=54, SCOMMENT=55, INCLUDE=56, SHARPCOMMENT=57, IntType=58, 
		Int=59, WS=60;
	public static final int
		RULE_program = 0, RULE_topLevelDef = 1, RULE_define = 2, RULE_primaryExpr = 3, 
		RULE_postFixExpr = 4, RULE_preFixExpr = 5, RULE_multiplicativeExpr = 6, 
		RULE_additiveExpr = 7, RULE_relationalExpr = 8, RULE_andExpr = 9, RULE_orExpr = 10, 
		RULE_expr = 11, RULE_lval = 12, RULE_nonPtrType = 13, RULE_type = 14, 
		RULE_inputList = 15, RULE_statements = 16, RULE_decSingle = 17, RULE_declist = 18, 
		RULE_simpleStatement = 19, RULE_lvals = 20, RULE_statement = 21, RULE_funcDef = 22, 
		RULE_arrayLength = 23, RULE_singleDef = 24, RULE_structDef = 25;
	public static final String[] ruleNames = {
		"program", "topLevelDef", "define", "primaryExpr", "postFixExpr", "preFixExpr", 
		"multiplicativeExpr", "additiveExpr", "relationalExpr", "andExpr", "orExpr", 
		"expr", "lval", "nonPtrType", "type", "inputList", "statements", "decSingle", 
		"declist", "simpleStatement", "lvals", "statement", "funcDef", "arrayLength", 
		"singleDef", "structDef"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'#define'", "'('", "')'", "','", "'--'", "'++'", "'-'", "'!'", 
		"'&'", "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", "'>='", "'=='", 
		"'!='", "'&&'", "'||'", "'?'", "':'", "'->'", "'.'", "'['", "']'", "'int'", 
		"'void'", "'struct'", "'='", "'+='", "'*='", "'/='", "'%='", "'-='", "';'", 
		"'{'", "'}'", "'if'", "'else'", "'out {'", "'outsource {'", "'} {'", "'while'", 
		"'for'", "'ofor'", "'return'", "'break'", "'continue'", "'_begin'", "'_end'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "Ident", "COMMENT", "SCOMMENT", "INCLUDE", 
		"SHARPCOMMENT", "IntType", "Int", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "c.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public cParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TlSingleContext extends ProgramContext {
		public TerminalNode EOF() { return getToken(cParser.EOF, 0); }
		public List<TopLevelDefContext> topLevelDef() {
			return getRuleContexts(TopLevelDefContext.class);
		}
		public TopLevelDefContext topLevelDef(int i) {
			return getRuleContext(TopLevelDefContext.class,i);
		}
		public TlSingleContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterTlSingle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitTlSingle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitTlSingle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new TlSingleContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__27) | (1L << T__28) | (1L << T__29))) != 0)) {
				{
				{
				setState(52);
				topLevelDef();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(58);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TopLevelDefContext extends ParserRuleContext {
		public TopLevelDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDef; }
	 
		public TopLevelDefContext() { }
		public void copyFrom(TopLevelDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TldefStctContext extends TopLevelDefContext {
		public StructDefContext structDef() {
			return getRuleContext(StructDefContext.class,0);
		}
		public TldefStctContext(TopLevelDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterTldefStct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitTldefStct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitTldefStct(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TldefDfnContext extends TopLevelDefContext {
		public DefineContext define() {
			return getRuleContext(DefineContext.class,0);
		}
		public TldefDfnContext(TopLevelDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterTldefDfn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitTldefDfn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitTldefDfn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TldefFuncContext extends TopLevelDefContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public TldefFuncContext(TopLevelDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterTldefFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitTldefFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitTldefFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TopLevelDefContext topLevelDef() throws RecognitionException {
		TopLevelDefContext _localctx = new TopLevelDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_topLevelDef);
		try {
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new TldefFuncContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				funcDef();
				}
				break;
			case 2:
				_localctx = new TldefDfnContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				define();
				}
				break;
			case 3:
				_localctx = new TldefStctContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				structDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefineContext extends ParserRuleContext {
		public DefineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_define; }
	 
		public DefineContext() { }
		public void copyFrom(DefineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefineIIContext extends DefineContext {
		public TerminalNode Ident() { return getToken(cParser.Ident, 0); }
		public TerminalNode Int() { return getToken(cParser.Int, 0); }
		public DefineIIContext(DefineContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterDefineII(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitDefineII(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitDefineII(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefineContext define() throws RecognitionException {
		DefineContext _localctx = new DefineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_define);
		try {
			_localctx = new DefineIIContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(T__0);
			setState(66);
			match(Ident);
			setState(67);
			match(Int);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExprContext extends ParserRuleContext {
		public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpr; }
	 
		public PrimaryExprContext() { }
		public void copyFrom(PrimaryExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ConstContext extends PrimaryExprContext {
		public TerminalNode Int() { return getToken(cParser.Int, 0); }
		public ConstContext(PrimaryExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterConst(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitConst(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitConst(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EparenContext extends PrimaryExprContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public EparenContext(PrimaryExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEparen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEparen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEparen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EfuncContext extends PrimaryExprContext {
		public TerminalNode Ident() { return getToken(cParser.Ident, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public EfuncContext(PrimaryExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEfunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEfunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEfunc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ElvalContext extends PrimaryExprContext {
		public LvalContext lval() {
			return getRuleContext(LvalContext.class,0);
		}
		public ElvalContext(PrimaryExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterElval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitElval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitElval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExprContext primaryExpr() throws RecognitionException {
		PrimaryExprContext _localctx = new PrimaryExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primaryExpr);
		int _la;
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new ElvalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				lval(0);
				}
				break;
			case 2:
				_localctx = new ConstContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				match(Int);
				}
				break;
			case 3:
				_localctx = new EparenContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				match(T__1);
				setState(72);
				expr();
				setState(73);
				match(T__2);
				}
				break;
			case 4:
				_localctx = new EfuncContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				match(Ident);
				setState(76);
				match(T__1);
				setState(85);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << Ident) | (1L << Int))) != 0)) {
					{
					setState(77);
					expr();
					setState(82);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__3) {
						{
						{
						setState(78);
						match(T__3);
						setState(79);
						expr();
						}
						}
						setState(84);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(87);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostFixExprContext extends ParserRuleContext {
		public PostFixExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postFixExpr; }
	 
		public PostFixExprContext() { }
		public void copyFrom(PostFixExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EPostFixContext extends PostFixExprContext {
		public Token op;
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public EPostFixContext(PostFixExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEPostFix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEPostFix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEPostFix(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EprimaryContext extends PostFixExprContext {
		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class,0);
		}
		public EprimaryContext(PostFixExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEprimary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEprimary(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEprimary(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostFixExprContext postFixExpr() throws RecognitionException {
		PostFixExprContext _localctx = new PostFixExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_postFixExpr);
		int _la;
		try {
			setState(94);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new EprimaryContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(90);
				primaryExpr();
				}
				break;
			case 2:
				_localctx = new EPostFixContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				primaryExpr();
				setState(92);
				((EPostFixContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==T__4 || _la==T__5) ) {
					((EPostFixContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreFixExprContext extends ParserRuleContext {
		public PreFixExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preFixExpr; }
	 
		public PreFixExprContext() { }
		public void copyFrom(PreFixExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EpreContext extends PreFixExprContext {
		public Token prefix;
		public PostFixExprContext postFixExpr() {
			return getRuleContext(PostFixExprContext.class,0);
		}
		public EpreContext(PreFixExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEpre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEpre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEpre(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EPrePostContext extends PreFixExprContext {
		public PostFixExprContext postFixExpr() {
			return getRuleContext(PostFixExprContext.class,0);
		}
		public EPrePostContext(PreFixExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEPrePost(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEPrePost(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEPrePost(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreFixExprContext preFixExpr() throws RecognitionException {
		PreFixExprContext _localctx = new PreFixExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_preFixExpr);
		int _la;
		try {
			setState(99);
			switch (_input.LA(1)) {
			case T__1:
			case T__9:
			case Ident:
			case Int:
				_localctx = new EPrePostContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				postFixExpr();
				}
				break;
			case T__4:
			case T__5:
			case T__6:
			case T__7:
			case T__8:
				_localctx = new EpreContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				((EpreContext)_localctx).prefix = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
					((EpreContext)_localctx).prefix = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(98);
				postFixExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultiplicativeExprContext extends ParserRuleContext {
		public MultiplicativeExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicativeExpr; }
	 
		public MultiplicativeExprContext() { }
		public void copyFrom(MultiplicativeExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EMultiBinContext extends MultiplicativeExprContext {
		public Token op;
		public MultiplicativeExprContext multiplicativeExpr() {
			return getRuleContext(MultiplicativeExprContext.class,0);
		}
		public PreFixExprContext preFixExpr() {
			return getRuleContext(PreFixExprContext.class,0);
		}
		public EMultiBinContext(MultiplicativeExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEMultiBin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEMultiBin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEMultiBin(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EMultiPreContext extends MultiplicativeExprContext {
		public PreFixExprContext preFixExpr() {
			return getRuleContext(PreFixExprContext.class,0);
		}
		public EMultiPreContext(MultiplicativeExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).enterEMultiPre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof cListener ) ((cListener)listener).exitEMultiPre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof cVisitor ) return ((cVisitor<? extends T>)visitor).visitEMultiPre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicativeExprContext multiplicativeExpr() throws RecognitionException {
		return multiplicativeExpr(0);
	}

	private MultiplicativeExprContext multiplicativeExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MultiplicativeExprContext _localctx = new MultiplicativeExprContext(_ctx, _parentState);
		MultiplicativeExprContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_multiplicativeExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new EMultiPreContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;
